--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,3 @@
 sources:
-  "linux-3.10.17-wandboard.tar.xz": a2052d6b78507cc1ef1578833f5c8b2a32847621
-  patch-3.10.17.xz: ae1347efa806fb639679f921b3a821f28e59b34c
-  linux-3.10.17-mdk2.tar.xz: ee50e12f4e1415004d563dda1643c12b365d1af2
+  linux-3.10.53-mdk1.tar.xz: f30da0bbfdee90ac34eef666372be30b42fdb9b4
+  linux-3.10.53-wandboard.tar.xz: 47d3d86152edd39d1aab644be11ffa9f8508d106
